[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
itermore = "0.1"
bitvec = "0.22.3"
hashbrown = "0.11.2"
cached = "0.23.0"
rustc-hash = "1.1.0"
regex = "1.5.4"
